--- a/packages/color_move/package.xml
+++ b/packages/color_move/package.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0"?>
 <package>
-  <name>block_finder</name>
+  <name>color_move</name>
   <version>0.0.0</version>
-  <description>The block_finder package</description>
-
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <description>The color_move package</description>
+  
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="matt@todo.todo">matt</maintainer>
-
+  <maintainer email="user@todo.todo">user</maintainer>
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
@@ -19,7 +18,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/block_finder</url> -->
+  <!-- <url type="website">http://ros.org/wiki/jacobian_publisher</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
@@ -40,15 +39,33 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-    <build_depend>roscpp</build_depend>
-    <run_depend>roscpp</run_depend>
-    <build_depend>geometry_msgs</build_depend>
-    <run_depend>geometry_msgs</run_depend>
-    <run_depend>cmake_modules</run_depend>
+  <buildtool_depend>catkin_simple</buildtool_depend>
+
+  <build_depend>roscpp</build_depend>
+  <build_depend>actionlib</build_depend>
+  <build_depend>simple_action_client</build_depend>
+  <build_depend>baxter_traj_streamer</build_depend>
+  <build_depend>cwru_action</build_depend>
+  <build_depend>trajectory_msgs</build_depend>
+  <build_depend>cmake_modules</build_depend>
+  <build_depend>std_msgs</build_depend>
+
+  <run_depend>roscpp</run_depend>
+  <run_depend>actionlib</run_depend>
+  <run_depend>simple_action_client</run_depend>
+  <run_depend>baxter_traj_streamer</run_depend>
+  <run_depend>cwru_action</run_depend>
+  <run_depend>trajectory_msgs</run_depend>
+  <run_depend>std_msgs</run_depend>
+  <run_depend>cmake_modules</run_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
+    <!-- You can specify that this package is a metapackage here: -->
+    <!-- <metapackage/> -->
 
+    <!-- Other tools can request additional information be placed here -->
   </export>
 </package>
+    
