--- a/packages/motion_planning/package.xml
+++ b/packages/motion_planning/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
-  <name>block_finder</name>
+  <name>motion_planning</name>
   <version>0.0.0</version>
-  <description>The block_finder package</description>
+  <description>The motion_planning package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="matt@todo.todo">matt</maintainer>
+  <maintainer email="user@todo.todo">user</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/block_finder</url> -->
+  <!-- <url type="website">http://wiki.ros.org/motion_planning</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
@@ -40,11 +40,31 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-    <build_depend>roscpp</build_depend>
-    <run_depend>roscpp</run_depend>
-    <build_depend>geometry_msgs</build_depend>
-    <run_depend>geometry_msgs</run_depend>
-    <run_depend>cmake_modules</run_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <run_depend>roscpp</run_depend>
+  <run_depend>std_msgs</run_depend>
+
+<!--for pcl-->
+<build_depend>sensor_msgs</build_depend>
+<build_depend>tf</build_depend>
+<build_depend>cwru_pcl_utils</build_depend>
+<run_depend>sensor_msgs</run_depend>
+<run_depend>tf</run_depend>
+<run_depend>cwru_pcl_utils</run_depend>
+<build_depend>libpcl-all-dev</build_depend>
+<run_depend>libpcl-all</run_depend>
+<build_depend>camke_modules</build_depend>
+
+<!--for cartesian moves-->
+<!--build_depend>baxter_cartesian_moves</build_depend>
+<run_depend>baxter_cartesian_moves</run_depend-->
+<build_depend>cwru_action</build_depend>
+<!--build_depend>actionlib_msgs</build_depend>
+<build_depend>actionlib</build_depend-->
+<run_depend>cwru_action</run_depend>
+<!--run_depend>actionlib_msgs</run_depend>
+<run_depend>actionlib</run_depend-->
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
