--- a/packages/motion_planning/package.xml
+++ b/packages/motion_planning/package.xml
@@ -44,7 +44,8 @@
   <build_depend>std_msgs</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
-
+    <build_depend>actionlib</build_depend>
+    <run_depend>actionlib</run_depend>
 <!--for pcl-->
 <build_depend>sensor_msgs</build_depend>
 <build_depend>tf</build_depend>
