--- a/packages/block_finder/package.xml
+++ b/packages/block_finder/package.xml
@@ -45,7 +45,8 @@
     <build_depend>geometry_msgs</build_depend>
     <run_depend>geometry_msgs</run_depend>
     <run_depend>cmake_modules</run_depend>
-
+    <build_depend>tf</build_depend>
+    <run_depend>tf</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
